--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webpack Exercise</title>
-</head>
-<body>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <title>Leaderboard</title>
+  </head>
+  <body>
+    <h1>Leaderboard</h1>
+    <div class="score-cont">
+      <div>
+				<div class="score-header">
+					<h2>Recent Scores</h2>
+					<button>Refresh</button>
+				</div>
+				<div class="scores">
+					<p>Name: 100</p>
+					<p>Name: 20</p>
+					<p>Name: 50</p>
+					<p>Name: 78</p>
+					<p>Name: 125</p>
+					<p>Name: 77</p>
+					<p>Name: 42</p>
+				</div>
+			</div>
+      <div>
+				<h2>Add your score</h2>
+				<form action="#">
+					<input type="text" placeholder="Your name" required>
+					<input type="text" placeholder="Your score" required>
+					<button type="submit" id="submit-btn">Submit</button>
+				</form>
+			</div>
+    </div>
+  </body>
 </html>
