--- a/src/index.html
+++ b/src/index.html
@@ -5,21 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Sono:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="./style.css">
+		<script src="https://kit.fontawesome.com/e83d856101.js" crossorigin="anonymous"></script>
     <title>Leaderboard</title>
   </head>
   <body>
-    <h1>Leaderboard</h1>
+    <h1><span class="white">Subway</span> Surfers</h1>
     <div class="score-cont">
       <div>
 				<div class="score-header">
-					<h2>Recent Scores</h2>
-					<button id="refresh">Refresh</button>
+					<h2 class="white">Leaderboard</h2>
+					<button id="refresh" class="white"><i class="fa-solid fa-arrows-rotate fa-2x"></i></button>
 				</div>
-				<div id="scores"></div>
+				<div id="scores">
+					<div class="score">
+						<span>1</span>
+						<img src="./images/profile1.png" alt="profile">
+						<p class="user">Shisui</p>
+						<p class="score-number">100</p>
+					</div>
+					<div class="score">
+						<span>2</span>
+						<img src="./images/profile2.png" alt="profile">
+						<p class="user">Itachi</p>
+						<p class="score-number">98</p>
+					</div>
+					<div class="score">
+						<span>3</span>
+						<img src="./images/profile3.png" alt="profile">
+						<p class="user">Sasuke</p>
+						<p class="score-number">88</p>
+					</div>
+					<div class="score">
+						<span>4</span>
+						<img src="./images/profile4.png" alt="profile">
+						<p class="user">Madara</p>
+						<p class="score-number">88</p>
+					</div>
+				</div>
 			</div>
-      <div>
-				<h2>Add your score</h2>
+      <div class="form-cont">
+				<img src="./images/score.png" alt="scorecard">
+				<h2>New Score</h2>
 				<form action="#">
 					<input type="text" id="name" placeholder="Your name" required>
 					<input type="text" id="score" placeholder="Your score" required>
@@ -27,5 +55,9 @@
 				</form>
 			</div>
     </div>
+		<footer>
+			<p><span class="white">Copyright &copy 2022 All rights reserved</span></p>
+			<p>A project by Okemdi Udeh</p>
+		</footer>
   </body>
 </html>
