--- a/src/index.html
+++ b/src/index.html
@@ -6,23 +6,28 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Sono:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="./style.css">
 		<script src="https://kit.fontawesome.com/e83d856101.js" crossorigin="anonymous"></script>
     <title>Leaderboard</title>
   </head>
   <body>
+		<!-- Main title -->
     <h1><span class="white">Subway</span> Surfers</h1>
+		<!-- Grid container -->
     <div class="score-cont">
       <div>
+				<!-- Leaderboard header -->
 				<div class="score-header">
 					<h2 class="white">Leaderboard</h2>
 					<button id="refresh" class="white"><i class="fa-solid fa-arrows-rotate fa-2x"></i></button>
 				</div>
-				<div id="scores">
-					<!-- <div class="empty">
-						<img src="./images/trophy.png" alt="trophy">
+				<!-- Leaderboard content -->
+				<div class="leaderboard">
+					<!-- Empty div -->
+					<div id="empty-id" class="empty">
+						<img id="trophy" alt="trophy">
 						<p>No scores yet. <br> Add a new score to see it here</p>
-					</div> -->
+					</div>
+					<!-- Loading skeleton -->
 					<div id="skeleton-loader" class="hide">
 						<div class="skeleton-cont">
 							<div class="skeleton skeleton-image"></div>
@@ -41,43 +46,23 @@
 							<div class="skeleton skeleton-text"></div>
 						</div>
 					</div>
-					<!-- <div class="score">
-						<span>1</span>
-						<img src="./images/profile1.png" alt="profile">
-						<p class="user">Shisui</p>
-						<p class="score-number">100</p>
-					</div>
-					<div class="score">
-						<span>2</span>
-						<img src="./images/profile2.png" alt="profile">
-						<p class="user">Itachi</p>
-						<p class="score-number">98</p>
-					</div>
-					<div class="score">
-						<span>3</span>
-						<img src="./images/profile3.png" alt="profile">
-						<p class="user">Sasuke</p>
-						<p class="score-number">88</p>
-					</div>
-					<div class="score">
-						<span>4</span>
-						<img src="./images/profile4.png" alt="profile">
-						<p class="user">Madara</p>
-						<p class="score-number">88</p>
-					</div> -->
+					<!-- Scores container -->
+					<div id="scores"></div>
 				</div>
 			</div>
+			<!-- Form container -->
       <div class="form-cont">
 				<div class="hide" id="success">Score added Successfully</div>
-				<img src="./images/score.png" alt="scorecard">
+				<img alt="scorecard" id="scorecard">
 				<h2>New Score</h2>
 				<form action="#">
 					<input type="text" id="name" placeholder="Your name" required>
-					<input type="number" min="1" id="score" placeholder="Your score" required>
+					<input type="number" min="1" max="99" id="score" placeholder="Your score" required>
 					<button type="submit" id="submit-btn">Submit</button>
 				</form>
 			</div>
     </div>
+		<!-- Footer -->
 		<footer>
 			<p><span class="white">Copyright &copy 2022 All rights reserved</span></p>
 			<p>A project by Okemdi Udeh</p>
