Add mobile responsiveness

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
     </div>
 		<!-- Footer -->
 		<footer>
-			<p><span class="white">Copyright &copy 2022 All rights reserved</span></p>
+			<p><span class="copy">Copyright &copy 2022 All rights reserved</span></p>
 			<p>A project by Okemdi Udeh</p>
 		</footer>
   </body>
