--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Sono:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/e83d856101.js" crossorigin="anonymous"></script>
     <title>Leaderboard</title>
-  <script defer src="main.js"></script></head>
+  <link rel="icon" href="favicon.png"><script defer src="main.js"></script></head>
   <body>
 		<!-- Main title -->
     <h1><span class="white">Subway</span> Surfers</h1>
@@ -64,7 +64,7 @@
     </div>
 		<!-- Footer -->
 		<footer>
-			<p><span class="white">Copyright &copy 2022 All rights reserved</span></p>
+			<p><span class="copy">Copyright &copy 2022 All rights reserved</span></p>
 			<p>A project by Okemdi Udeh</p>
 		</footer>
   </body>
